--- a/.gitmodules
+++ b/.gitmodules
@@ -8,7 +8,7 @@
 	path = submodules/xgds_map_server
 	url = https://babelfish.arc.nasa.gov/git/xgds_map_server
 [submodule "submodules/submodules/xgds_image"]
-	path = submodules/submodules/xgds_image
+	path = submodules/xgds_image
 	url = https://babelfish.arc.nasa.gov/git/xgds_image
 [submodule "submodules/xgds_notes"]
 	path = submodules/xgds_notes
