--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "submodules/xgds_planner2"]
 	path = submodules/xgds_planner2
 	url = https://babelfish.arc.nasa.gov/git/xgds_planner2
+[submodule "submodules/xgds_notes2"]
+	path = submodules/xgds_notes2
+	url = https://github.com/xgds/xgds_notes2.git
