--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "submodules/xgds_notes2"]
 	path = submodules/xgds_notes2
 	url = https://github.com/xgds/xgds_notes2.git
+[submodule "submodules/xgds_video"]
+	path = submodules/xgds_video
+	url = https://babelfish.arc.nasa.gov/git/xgds_video
