--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git://github.com/geocam/geocamUtilWeb.git
 [submodule "submodules/xgds_data"]
 	path = submodules/xgds_data
-	url = https://babelfish.arc.nasa.gov/git/xgds_data
+	url = https://github.com/xgds/xgds_data.git
 [submodule "submodules/xgds_map_server"]
 	path = submodules/xgds_map_server
 	url = https://babelfish.arc.nasa.gov/git/xgds_map_server
@@ -34,3 +34,5 @@
 [submodule "submodules/geocamPycroraptor2"]
 	path = submodules/geocamPycroraptor2
 	url = https://github.com/geocam/geocamPycroraptor2.git
+[submodule "xgds_data"]
+	url = https://github.com/xgds/xgds_data.git
