--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/xgds/xgds_data.git
 [submodule "submodules/xgds_map_server"]
 	path = submodules/xgds_map_server
-	url = https://babelfish.arc.nasa.gov/git/xgds_map_server
+	url = https://github.com/xgds/xgds_map_server.git
 [submodule "submodules/xgds_image"]
 	path = submodules/xgds_image
 	url = https://github.com/xgds/xgds_image.git
