moved xgds_planner2 to github

--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,7 @@
 	url = git://github.com/geocam/geocamTrackWeb.git
 [submodule "submodules/xgds_planner2"]
 	path = submodules/xgds_planner2
-	url = https://babelfish.arc.nasa.gov/git/xgds_planner2
+	url = https://github.com/xgds/xgds_planner2.git
 [submodule "submodules/xgds_notes2"]
 	path = submodules/xgds_notes2
 	url = https://github.com/xgds/xgds_notes2.git
