--- a/.gitmodules
+++ b/.gitmodules
@@ -30,7 +30,7 @@
 	url = https://babelfish.arc.nasa.gov/git/xgds_video
 [submodule "submodules/xgds_plot"]
 	path = submodules/xgds_plot
-	url = https://babelfish.arc.nasa.gov/git/xgds_plot
+	url = https://github.com/xgds/xgds_plot.git
 [submodule "submodules/geocamPycroraptor2"]
 	path = submodules/geocamPycroraptor2
 	url = https://github.com/geocam/geocamPycroraptor2.git
