moved xgds_video to github

--- a/.gitmodules
+++ b/.gitmodules
@@ -27,7 +27,7 @@
 	url = https://github.com/xgds/xgds_notes2.git
 [submodule "submodules/xgds_video"]
 	path = submodules/xgds_video
-	url = https://babelfish.arc.nasa.gov/git/xgds_video
+	url = https://github.com/xgds/xgds_video.git
 [submodule "submodules/xgds_plot"]
 	path = submodules/xgds_plot
 	url = https://github.com/xgds/xgds_plot.git
