.gitignore: ignore /var folder and make some other ignore patterns more specific to avoid ignoring things accidentally

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ media/css/*.r*.css
 *~
 .project
 .pydevproject
-bower_components/
-sourceme.sh
-build/
-data/
+/bower_components/
+/sourceme.sh
+/build/
+/data/
+/var/
