--- a/.gitmodules
+++ b/.gitmodules
@@ -48,4 +48,4 @@
 	url = https://github.com/xgds/xgds_instrument.git
 [submodule "submodules/xgds_status_board"]
 	path = submodules/xgds_status_board
-	url = https://babelfish.arc.nasa.gov/git/xgds_status_board
+	url = https://github.com/xgds/xgds_status_board.git
