--- a/.gitmodules
+++ b/.gitmodules
@@ -39,7 +39,7 @@
 	url = https://github.com/xgds/xgds_core.git
 [submodule "submodules/pextant"]
 	path = submodules/pextant
-	url = https://github.com/kezilu/pextant.git
+	url = https://github.com/norheim/pextant.git
 [submodule "submodules/xgds_sample"]
 	path = submodules/xgds_sample
 	url = https://github.com/xgds/xgds_sample
