--- a/bower.json
+++ b/bower.json
@@ -70,8 +70,12 @@
   },
   "resolutions": {
     "backbone": "1.1.2",
-    "jquery-ui": ">= 1.12.0",
+    "jquery-ui": "^1.12.1",
     "jquery": "2.1.4",
-    "lodash": "3.10.0"
+    "lodash": "3.10.0",
+    "get-size": "^2.0.2",
+    "outlayer": "^2.0.0",
+    "fizzy-ui-utils": "^2.0.0",
+    "marionette": "2.4.7"
   }
 }
