--- a/bower.json
+++ b/bower.json
@@ -17,12 +17,12 @@
     "backbone-relational": "^0.10.0",
     "bootstrap": "v4.0.0-alpha.2",
     "datatables-fixedcolumns": "^3.2.2",
-    "backbone.radio": "2.0.0-pre.1",
+    "backbone.radio": "2.0.0",
     "backbone-forms": "^0.14.1",
     "bootstrap-tagsinput": "^0.8.0",
     "dropzone": "^4.3.0",
     "datatables-select": "^1.2.0",
-    "backbone": "1.1.2",
+    "backbone": "1.3.3",
     "flot-axislabels": "*",
     "gridstack": "^0.2.6",
     "google-maps-utility-library-v3-infobubble": "^0.8.473",
@@ -43,7 +43,7 @@
     "klass": "git://github.com/ded/klass.git#^1.4.1",
     "js-cookie": "^2.1.3",
     "datatables-sorting-datetime-moment": "https://cdn.datatables.net/plug-ins/1.10.11/sorting/datetime-moment.js",
-    "marionette": "2.4.7",
+    "marionette": "3.2.0",
     "jquery-validation": "jquery-validate#^1.15.1",
     "locomote": "^1.1.9",
     "jqueryui-timepicker-addon": "jQuery-Timepicker-Addon#^1.6.3",
@@ -68,7 +68,7 @@
     "string-format": "git://github.com/tamarmot/string-format.git#^0.2.1"
   },
   "resolutions": {
-    "backbone": "1.1.2",
+    "backbone": "^1.3.3",
     "jquery-ui": ">= 1.12.0",
     "jquery": "2.1.4",
     "lodash": "3.10.0",
