--- a/bower.json
+++ b/bower.json
@@ -12,71 +12,10 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "Flot": "flot#^0.8.3",
-    "backbone-relational": "^0.10.0",
-    "bootstrap": "v4.0.0-alpha.2",
-    "datatables-fixedcolumns": "^3.2.2",
-    "backbone.radio": "2.0.0",
-    "backbone-forms": "master",
-    "bootstrap-tagsinput": "^0.8.0",
-    "dropzone": "^4.3.0",
-    "datatables-select": "^1.2.0",
-    "backbone": "1.3.3",
-    "flot-axislabels": "*",
-    "gridstack": "^0.2.6",
-    "google-maps-utility-library-v3-infobubble": "^0.8.473",
-    "gumby": "master",
-    "font-awesome": "fontawesome#^4.6.3",
-    "jeditable": "^1.7.3",
-    "jquery-cookie": "git://github.com/carhartl/jquery-cookie.git#^1.4.1",
-    "jquery-fileDownload": "git://github.com/johnculviner/jquery.fileDownload.git#^1.4.5",
-    "handlebars": "git://github.com/components/handlebars.js.git#^4.0.5",
-    "jquery-migrate": "http://code.jquery.com/jquery-migrate-1.2.1.js",
-    "jquery-mobile": "^1.4.5",
-    "jquery-ui-contextmenu": "https://github.com/mar10/jquery-ui-contextmenu.git#^1.13.0",
-    "fancytree": "^2.19.0",
-    "jquery": "2.1.4",
-    "jquery-form": "^3.46.0",
-    "jwplayer": "https://account.jwplayer.com/static/download/jwplayer-6.12.zip",
-    "klass": "git://github.com/ded/klass.git#^1.4.1",
-    "js-cookie": "^2.1.3",
-    "datatables-sorting-datetime-moment": "https://cdn.datatables.net/plug-ins/1.10.11/sorting/datetime-moment.js",
-    "marionette": "3.2.0",
-    "jquery-validation": "jquery-validate#^1.15.1",
-    "locomote": "^1.1.9",
-    "jqueryui-timepicker-addon": "jQuery-Timepicker-Addon#^1.6.3",
-    "moment-range": "^2.2.0",
-    "moment-timezone": "^0.5.5",
-    "modernizr": "components-modernizr#^2.8.3",
-    "ol3-popup": "^1.0.1",
-    "moment-duration-format": "^1.3.0",
-    "packery": "^2.0.0",
-    "pure-uuid": "^1.4.0",
-    "tether": "https://github.com/HubSpot/tether.git#^1.3.7",
-    "resumable": "git://github.com/23/resumable.js.git#^1.0.2",
-    "proj4": "^2.3.15",
-    "qunit": "^2.0.1",
-    "openseadragon": "^2.2.1",
-    "sprintf.js": "^1.0.3",
-    "usng": "git://github.com/codice/usng.js.git#^0.2.2",
-    "openlayers3": "https://github.com/tamarmot/ol3/releases/download/3.18.3/ol.zip",
-    "typeahead.js": "^0.11.1",
-    "lodash": "3.10.0",
-    "uuid4": "^3.0.0",
-    "string-format": "git://github.com/tamarmot/string-format.git#^0.2.1"
-  },
   "resolutions": {
     "backbone": "1.3.3",
-    "backbone-forms": "master",
-    "jquery-ui": "^1.12.1",
-    "jquery": "3.1.1",
-    "lodash": ">= 4.14.2",
-    "get-size": "^2.0.2",
-    "outlayer": "^2.0.0",
-    "fizzy-ui-utils": "^2.0.0",
     "marionette": "3.2.0",
-    "moment-range": "^2.2.0",
-    "jquery-form": "^3.46.0"
+    "backbone-forms": "master",
+    "jquery": "2.1.4"
   }
 }
