--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ test.txt
 /apps/basaltApp/hvnp_air_quality.zip
 /apps/basaltApp/hvnp_air_quality/icons
 /apps/basaltApp/hvnp_air_quality/test_output/
+/apps/basaltApp/pycroraptor_dev.json
