Add pyraptor config files to .gitignore.  An initial example will be checked out, but they now get built from Ansible templates

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ test.txt
 /apps/basaltApp/hvnp_air_quality/icons
 /apps/basaltApp/hvnp_air_quality/test_output/
 /apps/basaltApp/pycroraptor_dev.json
+/apps/basaltApp/pycroraptor.json
+pyraptord
