--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,6 @@
     "backbone": "1.3.3",
     "marionette": "3.2.0",
     "backbone-forms": "master",
-    "jquery": "2.1.4"
+    "jquery": "^3.2.1"
   }
 }
