New ansible script to insert JS filters into tungsten replicator properties files

--- a/apps/basaltApp/scripts/installReplicationJsScripts.yml
+++ b/apps/basaltApp/scripts/installReplicationJsScripts.yml
@@ -21,4 +21,4 @@
       register: replication_properties_dir
 
     - debug:
-        msg: "Replication properties dir: {{ replication_properties_dir }}
+        msg: "Replication properties dir: {{ replication_properties_dir }}"
