work in progress, ping subsystems script works

--- a/apps/basaltApp/scripts/status_board/pingConfigEV2.json
+++ b/apps/basaltApp/scripts/status_board/pingConfigEV2.json
@@ -1,2 +1,2 @@
-['boat','bpc1', 'ev2teradek', 'redCamera2',
- 'wrist2', 'pXRF', 'FTIR', 'FLIR', 'LIBS']
+["boat","bpc1", "ev2teradek", "redCamera2",
+ "wrist2", "pXRF", "FTIR", "FLIR", "LIBS"]
