--- a/apps/basaltApp/scripts/status_board/loadAverageConfigBoat.json
+++ b/apps/basaltApp/scripts/status_board/loadAverageConfigBoat.json
@@ -1,7 +1,6 @@
-{'fieldLoadAverage' : {'HOST': 'irg@boat'}, 
-  'groundLoadAverage': {'HOST': 'irg@shore'},
-  'bpc1LoadAverage': {'HOST':'irg@bpc1'},
-  'bpc2LoadAverage': {'HOST':'irg@bpc2'},
-  'bpc3LoadAverage': {'HOST':'irg@bpc3'}
+{"fieldLoadAverage" : {"HOST": "irg@boat"}, 
+  "groundLoadAverage": {"HOST": "irg@shore"},
+  "bpc1LoadAverage": {"HOST":"irg@bpc1"},
+  "bpc2LoadAverage": {"HOST":"irg@bpc2"},
+  "bpc3LoadAverage": {"HOST":"irg@bpc3"}
  }
-  
