--- a/apps/basaltApp/scripts/status_board/pingConfigBoat.json
+++ b/apps/basaltApp/scripts/status_board/pingConfigBoat.json
@@ -1,5 +1,5 @@
 ["shore", 
- "basalt-dev",
+ "basaltDev",
  "bpc1",
  "bpc2",
  "bpc3",
@@ -10,6 +10,8 @@
  "redCamera2",
  "wrist1",
  "wrist2",
+ "physioTablet1",
+ "physioTablet2",
  "pXRF",
  "FTIR",
  "FLIR",
