--- a/apps/basaltApp/scripts/status_board/pingConfigEV1.json
+++ b/apps/basaltApp/scripts/status_board/pingConfigEV1.json
@@ -1,2 +1,7 @@
-["bpc2", "ev1teradek", "redCamera1", 
- "wrist1", "boat"]
+["bpc2", 
+ "ev1teradek", 
+ "redCamera1", 
+ "wrist1",
+ "physioTablet1",
+ "boat"
+ ]
