--- a/apps/basaltApp/scripts/status_board/pingConfigShore.json
+++ b/apps/basaltApp/scripts/status_board/pingConfigShore.json
@@ -1,2 +1,18 @@
-["boat", "basalt-dev","bpc1", "bpc2", "bpc3", "ev1teradek", "ev2teradek", "saTeradek", "redCamera1", "redCamera2",
- "wrist1", "wrist2", "pXRF", "FTIR", "FLIR", "LIBS"]
+["boat", 
+ "basaltDev",
+ "bpc1", 
+ "bpc2", 
+ "bpc3", 
+ "ev1teradek", 
+ "ev2teradek", 
+ "saTeradek", 
+ "redCamera1", 
+ "redCamera2",
+ "wrist1", 
+ "wrist2", 
+ "physioTablet1",
+ "physioTablet2",
+ "pXRF", 
+ "FTIR", 
+ "FLIR", 
+ "LIBS"]
