--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "backbone": "1.3.3",
     "marionette": "3.2.0",
     "backbone-forms": "master",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "dropzone": "^5.1.1",
+    "modernizr": "^3.5.0"
   }
 }
