--- a/scripts/ansible/update-code.yml
+++ b/scripts/ansible/update-code.yml
@@ -14,12 +14,12 @@
 # specific language governing permissions and limitations under the License.
 #__END_LICENSE__
 
-# If there's an existing .git path, we assume someone else checked out the code and we
-# don't mess with it...
-    - stat:
-        path: "/home/irg/xgds_basalt/"
-      register: basalt_dir
+- hosts: boat, shore, bpc1, bpc2, bpc3, old-shore
 
+  vars:
+    basalt_dir: "/home/irg/xgds_basalt/"
+
+  tasks:
     - name: xgds_basalt git pull
       command: git pull dev master
       args:
@@ -34,8 +34,11 @@
       command: ./manage.py prep
       args:
         chdir: "{{ basalt_dir }}"
+      notify:
+        - Restart apache2
         
+  handlers:
     - name: Restart apache2
       service: name=apache2 state=restarted
+      become: true
     
-
