--- a/scripts/ansible/update-code.yml
+++ b/scripts/ansible/update-code.yml
@@ -14,7 +14,7 @@
 # specific language governing permissions and limitations under the License.
 #__END_LICENSE__
 
-- hosts: boat, shore, bpc1, bpc2, bpc3, old-shore
+- hosts: all
 
   vars:
     basalt_dir: "/home/irg/xgds_basalt/"
