--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "backbone-forms": "master",
     "jquery": "3.2.1",
     "dropzone": "^5.1.1",
-    "modernizr": "^3.5.0"
+    "modernizr": "^3.5.0",
+    "fancytree": "v2.25.0"
   }
 }
