--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "jquery": "3.2.1",
     "dropzone": "^5.1.1",
     "modernizr": "^3.5.0",
-    "fancytree": "v2.25.0"
+    "fancytree": "v2.25.0",
     "bootstrap-tagsinput": "^0.8.0",
     "gridstack": "0.2.6"
   }
