add django_npm_apps dependency

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "submodules/xgds_status_board"]
 	path = submodules/xgds_status_board
 	url = https://github.com/xgds/xgds_status_board.git
+[submodule "submodules/django_npm_apps"]
+	path = submodules/django_npm_apps
+	url = https://github.com/VWoeltjen/django_npm_apps.git
